# PS3-Rich-Presence-for-Discord-Rusty

./: .gitignore  Cargo.toml  README.md  build.rs
src/: artifact_upload.rs  config.rs  local_images.rs  main.rs  network_scanner.rs  ps3_scraper.rs  states.rs  update_discord.rs  webman_discovery.rs
