[package]
name = "ps3_rich_presence_for_discord_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netscan = "0.15.0"
local-ip-address = "0.5.3"
default-net = "0.15.0"
ipnet = "2.7.2"
pbr = "1.1.1"
reqwest = {version="0.11.18", features=["blocking", "multipart"]}
select = "0.6.0"
discord-rich-presence = "0.2.3"
regex = "1.8.4"
serde_json = "1.0.99"
